# Hackathon-

Hackathon-Todo-cli-phase1/: .gitignore  README.md  pyproject.toml  test_implementation.py
Hackathon-Todo-cli-phase1/.claude/: settings.local.json
Hackathon-Todo-cli-phase1/docs/: usage.md
Hackathon-Todo-cli-phase1/history/prompts/1-todo-console-app/: 1-create-todo-console-app-spec.spec.prompt.md  2-create-implementation-plan.plan.prompt.md  3-clarify-todo-spec.spec.prompt.md  4-generate-implementation-tasks.tasks.prompt.md  5-implement-todo-app.tasks.prompt.md
Hackathon-Todo-cli-phase1/specs/1-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Hackathon-Todo-cli-phase1/specs/2-interactive-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Hackathon-Todo-cli-phase1/todo/: main.py
Hackathon-Todo-cli-phase1/todo/cli/: commands.py
Hackathon-Todo-cli-phase1/todo/interactive/: controllers.py  main.py  menu.py  session.py  ui_components.py
Hackathon-Todo-cli-phase1/todo/models/: task.py
Hackathon-Todo-cli-phase1/todo/repositories/: in_memory_repo.py
Hackathon-Todo-cli-phase1/todo/services/: task_service.py
Hackathon-Todo-cli-phase1/todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Hackathon2-phase2/backend/: CLAUDE.md  db.py  main.py  migrate_db.py  models.py  pyproject.toml  requirements.txt  reset_db.py  simple_verify.py  test_db_conn.py  test_runner.py  todo.db  verify_isolation.py
Hackathon2-phase2/backend/tests/: test_isolation.py
(+290 files in other folders)
