[project]
name = "todo-app"
version = "0.1.0"
description = "Todo In-Memory Python Console Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
todo = "todo.main:app"

[tool.setuptools]
packages = ["todo", "todo.models", "todo.services", "todo.repositories", "todo.cli"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"